[tool.poetry]
name = "mcv-api-python-unofficial"
version = "0.1.0"
description = "reverse engineering api of mycoursevile"
authors = ["HRNPH <hrnph@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
