[tool.poetry]
name = "mcv-api-python-unofficial"
version = "0.1.0"
description = "reverse engineering api of mycoursevile"
authors = ["HRNPH <hrnph@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
